--- a/versions.properties
+++ b/versions.properties
@@ -6,6 +6,8 @@
 ####
 #### suppress inspection "SpellCheckingInspection" for whole file
 #### suppress inspection "UnusedProperty" for whole file
+version.rxjava2.rxjava=2.2.21
+version.kotlinx.serialization=1.3.2
 version.rxjava3.rxjava=3.1.5
 version.kotlinx.coroutines=1.6.4
 version.kotlin=1.7.10
